--- a/lesson-3/target-audience.html
+++ b/lesson-3/target-audience.html
@@ -29,7 +29,11 @@
     <section class="sec-3">
         <h2 class="sec-3-title">Target Audience</h2>
         <p class="sec-3-par">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, laboriosam quasi? Explicabo quae ad unde magni, veniam voluptatem saepe doloremque, nesciunt, laudantium fuga laborum! Illo molestias harum blanditiis recusandae velit.
+            The target audience of this website is the average person that is 
+            wants to know the current weather in their city. The website will also offer 
+            relavent article about their city, and thiswebsite can be viewed in 
+            different devices with the corresponding responsive design to offer 
+            an easy and informative experience for the user.
         </p>
     </section>
     <!-- ***** This will be added in future assignements per lesson 3 instructions *****
