--- a/lesson-3/typography.html
+++ b/lesson-3/typography.html
@@ -62,28 +62,37 @@
           <tr>
             <td>H1</td>
             <td>Noto Sans JP</td>
-            <td class="color-4">#CCDBDC</td>
+            <td class="color-4">#F8F8FF</td>
             <td class="sample-4">Text</td>
           </tr>
           <tr>
             <td>H2</td>
             <td>Noto Sans JP</td>
-            <td class="color-5">#CCDBDC</td>
+            <td class="color-5">#F8F8FF</td>
             <td class="sample-5">Text</td>
           </tr>
           <tr>
             <td>H3</td>
             <td>Noto Sans JP</td>
-            <td class="color-6">#CCDBDC</td>
+            <td class="color-6">#F8F8FF</td>
             <td class="sample-6">Text</td>
           </tr>
           <tr>
             <td>Paragraph</td>
             <td>Lato</td>
-            <td class="color-7">#CCDBDC</td>
+            <td class="color-7">#F8F8FF</td>
             <td class="sample-7">Text</td>
           </tr>
         </table>
+        <div class="example-div">
+        <h1 class="example-heading">Example of heading font</h1>
+        <h2 class="example-sub-heading">example of sub-heading</h2>
+        <p class="example-par">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem maxime et, 
+          porro voluptate temporibus fuga eveniet molestiae architecto, soluta ipsum 
+          ullam ducimus quibusdam officiis nulla aliquam dolor quod quos harum.
+        </p>
+        </div>
     </section>
 </main>
 </body>
