--- a/lesson-3/color-scheme.html
+++ b/lesson-3/color-scheme.html
@@ -28,7 +28,7 @@
 <main class="content-3">
     <section class="sec-5">
         <h2 class="sec-5-title">Color Scheme</h2>
-        <p class="sec-5-par">Pallete URL <a href="https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249">https://coolors.co/9ad1d4-80ced7-007ea7-ccdbdc-003249</a></p>
+        <p class="sec-5-par">Pallete URL <a href="https://coolors.co/100c08-f8f8ff-007ea7-ccdbdc-003249">https://coolors.co/100c08-f8f8ff-007ea7-ccdbdc-003249</a></p>
         <table class="sec-5-table">
           <tr>
             <th>Primary</th>
@@ -41,10 +41,15 @@
             <td class="primary">[#007EA7]</td>
             <td class="secondary">[#CCDBDC]</td>
             <td class="accent-1">[#003249]</td>
-            <td class="accent-2">[#80CED7]</td>
-            <td class="accent-3">[#9AD1D4]</td>
+            <td class="accent-2">[#F8F8FF]</td>
+            <td class="accent-3">[#000000]</td>
           </tr>
         </table>
+        <p clas="sec-5-par2">
+          These are the colors I choose for the weather website because of their 
+          contrast so they pass the WCAG test. They are all also a fresh color pallete 
+          which is appealing the eye.
+        </p>
     </section>
 </main>
 </body>
