--- a/lesson-3/target-audience.html
+++ b/lesson-3/target-audience.html
@@ -31,7 +31,7 @@
         <p class="sec-3-par">
             The target audience of this website is the average person that is 
             wants to know the current weather in their city. The website will also offer 
-            relavent article about their city, and thiswebsite can be viewed in 
+            relevant article about their city, and this website can be viewed in 
             different devices with the corresponding responsive design to offer 
             an easy and informative experience for the user.
         </p>
