--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -33,6 +33,7 @@
     The website URL for my weather site project is weathernearme.us and the reason I choose this url aside from it being available is that 
     it is easy to remember "Siri what is the weather near me?". This helps the user remember the name of the site so they keep coming back to it.
   </p>
+  <img class="screenshot" src="/img/lesson-3-img/Screenshot 2021-06-04 010620.png" alt="Domain availability">
   <a class="sec-1-link" href="https://domains.google.com/registrar/search?searchTerm=weather&hl=en&_ga=2.6789621.653273563.1622618147-973383235.1622618147#">Domain name availability</a>
 </section>
 <section class="sec-2">
