--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <ul>
   <li>Lesson 02:<a href="/Lesson-2/design-principles.html">Design Principles</a></li>
   <li>Lesson 03:<a href="/lesson-3/index.html">Website Planning Document</a></li>
+  <li>Lesson 04:<a href="">Preston Town Page</a></li>
 </ul>
 </main>
   <footer>
