--- a/lesson-4/preston-4.html
+++ b/lesson-4/preston-4.html
@@ -15,6 +15,61 @@
   <script defer src=""></script>
 </head>
 <body>
-
+  <header class="weather-site-header">
+    <img class="weather-site-logo" src="" alt="logo">
+    <h1 class="website-name">Weather Near Me</h1>
+    <nav class="header-nav">
+        <a href="###">Home</a>
+        <a href="###">Preston</a>
+        <a href="###">Soda Springs</a>
+        <a href="###">Fish Haven</a>
+        <a href="###">Storm Center</a>
+        <a href="###">Gallery</a>
+    </nav>
+  </header>
+  <main>
+    <h2 class="city-name-1">Preston Idaho</h2>
+    <section class="weather-sec-1">
+      <div>
+        <h3 class="div-weather-title"></h3>
+        <p class="div-weather-par">Lorem ipsum dolor sit, amet consectetur 
+          adipisicing elit. Eaque ea adipisci architecto magnam officiis 
+          similique voluptatem labore optio placeat illum at quod voluptate 
+          veniam eligendi, soluta totam in a explicabo?</p>
+        <img class="hero-img" src="###" alt="hero image">
+      </div>
+    </section>
+    <h3 class="forecast-title">Five Day Forecast</h3>
+    <section class="weather-sec-2">
+      <img class="day-1" src="###" alt="weather-icon">
+      <img class="day-2" src="###" alt="weather-icon">
+      <img class="day-3" src="###" alt="weather-icon">
+      <img class="day-4" src="###" alt="weather-icon">
+      <img class="day-5" src="###" alt="weather-icon">
+    </section>
+    <section class="weather-sec-3">
+      <h3 class="weather-sec-3-title">Article Title</h3>
+      <p class="weather-sec-3-par">Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+        Assumenda, quam officia. Quo id tempore dignissimos facilis illum 
+        optio laboriosam dolorum odio, aliquam rem repudiandae, quasi vero 
+        quae quaerat fuga ut.</p>
+      <img class="weather-sec-3-img" src="###" alt="image">
+    </section>
+  </main>
+  <footer>
+    <img class="footer-map" src="" alt="map">
+    <div>
+      <h3 class="div-title">Contact Information</h3>
+      <p class="div-par">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Inventore, fuga. Quae, magni a ab dolorem facilis modi cum! 
+        Deserunt quas quibusdam perferendis similique dolor, pariatur 
+        eligendi incidunt repudiandae laudantium quia!</p>
+    </div>
+    <div class="social-media">
+      <a href="###" target="_blank">Facebook</a><img class="social-logo-1" src="###" alt="facebook logo">
+      <a href="###" target="_blank">Twitter</a><img class="social-logo-2" src="###" alt="twitter logo">
+      <a href="###" target="_blank">Instagram</a><img class="social-logo-3" src="###" alt="instagram logo">
+    </div>
+  </footer>
 </body>
 </html>
