--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 <ul>
   <li>Lesson 02:<a href="/Lesson-2/design-principles.html">Design Principles</a></li>
   <li>Lesson 03:<a href="/lesson-3/index.html">Website Planning Document</a></li>
-  <li>Lesson 04:<a href="">Preston Town Page</a></li>
+  <li>Lesson 04:<a href="/lesson-4/preston-4.html">Preston Town Page</a></li>
+  <li>Lesson 05:<a href="">assignment</a></li>
+  <li>Lesson 06:<a href="">assignment</a></li>
+  <li>Lesson 07:<a href="">assignment</a></li>
+  <li>Lesson 08:<a href="">assignment</a></li>
+  <li>Lesson 09:<a href="">assignment</a></li>
 </ul>
 </main>
   <footer>
