--- a/lesson-9/prophets.html
+++ b/lesson-9/prophets.html
@@ -11,7 +11,7 @@
   <link href="/css/lesson_9/prophets.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap" rel="stylesheet">
-  <script defer src="###"></script>
+  <script defer src="/js/lesson-9/prophets.js"></script>
 </head>
 <body>
 <header class="lesson-title">
@@ -19,7 +19,7 @@
 </header>
 <main>
     <div class="cards">
-        
+
     </div>
 </main>
 </body>
