--- a/lesson-4/preston-4.html
+++ b/lesson-4/preston-4.html
@@ -8,16 +8,17 @@
   <meta name="description" content="Preston Town page assignment for WDD 230: Web Frontend Development at Brigham Young University - Idaho">
   <title>Preston Town Page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-  <link href="" rel="stylesheet" />
-  <link href="" rel="stylesheet" />
-  <link href="" rel="stylesheet" />
+  <link href="/lesson-4/small.css" rel="stylesheet" />
+  <link href="/lesson-4/medium.css" rel="stylesheet" />
+  <link href="/lesson-4/large.css" rel="stylesheet" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <script defer src=""></script>
+  <script defer src="/lesson-4/l4script.js"></script>
 </head>
 <body>
   <header class="weather-site-header">
-    <img class="weather-site-logo" src="" alt="logo">
+    <img class="weather-site-logo" src="/img/lesson-3-img/iconfinder_1530390_weather_clouds_cloudy_rain_sunny_icon_512px.png" alt="logo">
     <h1 class="website-name">Weather Near Me</h1>
+    <div class="nav-div">
     <nav class="header-nav">
         <a href="###">Home</a>
         <a href="###">Preston</a>
@@ -26,17 +27,18 @@
         <a href="###">Storm Center</a>
         <a href="###">Gallery</a>
     </nav>
+    </div>
   </header>
   <main>
     <h2 class="city-name-1">Preston Idaho</h2>
     <section class="weather-sec-1">
-      <div>
-        <h3 class="div-weather-title"></h3>
+      <img class="hero-img" src="###" alt="hero image">
+      <div class="weather-sum-div">
+        <h3 class="div-weather-title">Weather Summary</h3>
         <p class="div-weather-par">Lorem ipsum dolor sit, amet consectetur 
           adipisicing elit. Eaque ea adipisci architecto magnam officiis 
           similique voluptatem labore optio placeat illum at quod voluptate 
           veniam eligendi, soluta totam in a explicabo?</p>
-        <img class="hero-img" src="###" alt="hero image">
       </div>
     </section>
     <h3 class="forecast-title">Five Day Forecast</h3>
